--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,7 +1,7 @@
 @import 'menuGamb.css';
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 body {
-	background: url(../img/4532045a-4d12-4582-b31e-563c38887883.jpg);
+	background: url(../img/back.jpg);
 	background-attachment: fixed;
 	margin: 0;
 	padding: 0;
@@ -9,9 +9,9 @@ body {
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header {
-	width: auto;
+	width: 100%;
 	height: 70px;
-	background-color: #9932cc;
+	background-color: #d5713f;
 }
 
 .cardShell {
@@ -27,7 +27,13 @@ body {
 	margin-top: 50px;
 	width: 384px;
 	height: 400px;
-	background-color: #9932cc;
+	background-color: #efa94a;
+	border-radius: 10px;
+}
+
+.textT:hover {
+	transition: 1s;
+	padding-left: 80px;
 }
 
 .textT {
@@ -41,7 +47,7 @@ body {
 .foot {
 	width: auto;
 	height: 170px;
-	background-color: #9932cc;
+	background-color: #efa94a;
 	margin-top: 70px;
 }
 
