--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,68 +1,1 @@
-@import 'menuGamb.css';
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-body {
-	background: url(../img/back.jpg);
-	background-attachment: fixed;
-	margin: 0;
-	padding: 0;
-	font-family: -apple-system BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.header {
-	width: 100%;
-	height: 70px;
-	background-color: #d5713f;
-}
-
-.cardShell {
-	margin-top: 50px;
-}
-
-.imgAlb {
-	border-radius: 10px;
-}
-
-.card {
-	margin-left: 10px;
-	margin-top: 50px;
-	width: 384px;
-	height: 400px;
-	background-color: #efa94a;
-	border-radius: 10px;
-}
-
-.textT:hover {
-	transition: 1s;
-	padding-left: 80px;
-}
-
-.textT {
-	margin-left: 10px;
-	font-size: 34px;
-	color: aliceblue;
-	border-left: 5px solid #999;
-	padding-left: 10px;
-}
-
-.foot {
-	width: auto;
-	height: 180px;
-	background-color: #efa94a;
-	margin-top: 70px;
-}
-
-.socialLink {
-	position: absolute;
-}
-
-a {
-	text-decoration: none;
-}
-
-@media (max-width: 416px) {
-	.card {
-		margin: 0;
-		margin-top: 50px;
-		width: 384px;
-	}
-}
+@import 'nav-bar.css';@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");*{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;margin:0;padding:0;border:none}body{background:#5b78c7;background:linear-gradient(90deg,#5b78c7 9%,#4c44b8 86%)}.title{position:absolute;z-index:100;padding:20px;font-size:28px;font-family:"Lobster",cursive;color:#fff;font-weight:300}.flex-center-colum{display:flex;justify-content:center;align-items:center;flex-direction:column}.section{margin-top:10px}.card{margin-top:40px;width:305px;height:360px;border-radius:10px;background:#5b78c7;box-shadow:0 0 20px rgba(0,0,0,0.5)}.card .card-img{width:305px;height:180px;border-radius:10px}.card .card-title{color:#fff;font-size:34px;padding:10px}.card .card-text{color:#fff;font-size:17px;padding:10px}.card .text-min{font-size:12px}.card .card-btn{margin:10px;outline:none;border-radius:10px;width:130px;height:40px;background-color:crimson;color:#fff}
